--- a/bun-app/index.html
+++ b/bun-app/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/profilepic.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>SapphInk</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jim+Nightshade&family=Josefin+Sans:wght@600&family=Lavishly+Yours&family=Tillana:wght@500&display=swap" rel="stylesheet">
   </head>
   <body>
+    
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
